idp/backstage/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
spec:
  selector: { app: backstage }
  ports:
    - name: http
      port: 7007
      targetPort: 7007
